<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="167dp">

        <ImageView
            android:id="@+id/backdrop_path"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toTopOf="@+id/vote_average"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/original_title"
            android:layout_width="272dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/backdrop_path"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="281dp"
            android:layout_height="69dp"
            android:layout_marginStart="8dp"
            android:maxLines="3"
            android:text="@string/overview"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/backdrop_path"
            app:layout_constraintTop_toBottomOf="@+id/original_title"
            app:layout_constraintVertical_bias="0.363" />

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="41dp"
            android:layout_height="20dp"
            android:layout_marginEnd="117dp"
            android:layout_marginBottom="4dp"
            android:text="@string/vote_average"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/like"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/share" />

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>